Fixed some scaling on mobile Added menu highlighting on active page

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6399,12 +6399,13 @@ body {
   }
 }
 .flag {
-  width: 50%;
+  width: 30%;
   margin: 0 auto;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .flag {
-    width: 100px;
+    max-width: 100px;
+    width: 90%;
   }
 }
 .navbar-title {
@@ -6499,17 +6500,27 @@ body {
   padding: 50px 20px 50px 20px;
 }
 .icon {
-  width: 50%;
+  width: 30%;
   margin: 0 auto;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .icon {
+    max-width: 100px;
     width: 90%;
   }
 }
 #thankyou-row {
   height: 100%;
   display: block;
+}
+.footer-logo {
+  max-width: 30%;
+  padding-bottom: 10px;
+}
+@media (min-width: 768px) {
+  .footer-logo {
+    max-width: 50%;
+  }
 }
 /* Generated by Font Squirrel (http://www.fontsquirrel.com) on December 26, 2014 */
 @font-face {
