--- a/less/uni-header.less
+++ b/less/uni-header.less
@@ -52,11 +52,13 @@
 }
 
 .flag {
-  width: 50%;
+  width: 30%;
   margin: 0 auto;
   
-    @media (min-width: @screen-sm-min) {
-      width: 100px;
+    @media (min-width: @screen-md-min) {
+      
+      max-width: 100px;
+      width: 90%;
     }
 }
 
